[gd_scene load_steps=11 format=2]

[ext_resource path="res://ArenaSummary.gd" type="Script" id=1]
[ext_resource path="res://image/gui_background.png" type="Texture" id=2]
[ext_resource path="res://image/bg2.png" type="Texture" id=3]
[ext_resource path="res://new_styleboxtexture.tres" type="StyleBox" id=4]
[ext_resource path="res://font/VT323-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ParticleTimer.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=5]
size = 20
outline_color = Color( 1, 0.941176, 0.180392, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 5 )

[node name="ArenaSummary" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -50.0
margin_right = -70.0
margin_bottom = -50.0
rect_scale = Vector2( 1.2, 1.15 )
script = ExtResource( 1 )

[node name="gui_background" type="Sprite" parent="."]
position = Vector2( 400, 300.975 )
scale = Vector2( 3.4, 3.5 )
texture = ExtResource( 2 )

[node name="bg2" type="Sprite" parent="."]
self_modulate = Color( 0.203922, 0.619608, 0.843137, 1 )
position = Vector2( 400, 301.981 )
scale = Vector2( 0.773271, 0.773271 )
texture = ExtResource( 3 )
region_rect = Rect2( 100, 0, 200, 0 )

[node name="Button" type="Button" parent="."]
margin_left = 310.0
margin_top = 440.0
margin_right = 399.023
margin_bottom = 477.274
rect_scale = Vector2( 2, 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.827451, 0.87451, 0.231373, 1 )
text = "OK"

[node name="Particle1" type="CPUParticles2D" parent="."]
position = Vector2( 230, 190 )
emitting = false
amount = 100
lifetime = 5.0
one_shot = true
speed_scale = 3.0
explosiveness = 0.8
randomness = 0.5
spread = 180.0
gravity = Vector2( 0, 2 )
initial_velocity = 25.0
initial_velocity_random = 1.0
scale_amount = 3.0
color = Color( 0.854902, 0.160784, 0.94902, 1 )

[node name="Particle2" type="CPUParticles2D" parent="."]
position = Vector2( 390, 230 )
emitting = false
amount = 120
lifetime = 5.0
one_shot = true
speed_scale = 3.0
explosiveness = 0.8
randomness = 0.5
spread = 180.0
gravity = Vector2( 0, 2 )
initial_velocity = 30.0
initial_velocity_random = 1.0
scale_amount = 3.0
color = Color( 0.870588, 0.94902, 0.160784, 1 )

[node name="Particle3" type="CPUParticles2D" parent="."]
position = Vector2( 560, 190 )
emitting = false
amount = 180
lifetime = 5.0
one_shot = true
speed_scale = 3.0
explosiveness = 0.8
randomness = 0.5
spread = 180.0
gravity = Vector2( 0, 2 )
initial_velocity = 20.0
initial_velocity_random = 1.0
scale_amount = 2.0
color = Color( 0.32549, 0.952941, 0.45098, 1 )

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
script = ExtResource( 6 )

[node name="Result" type="Label" parent="."]
margin_left = 250.0
margin_top = 160.0
margin_right = 554.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 2 )
text = "Perfect!"
align = 1
autowrap = true

[node name="Description" type="Label" parent="."]
margin_left = 150.0
margin_top = 270.0
margin_right = 650.0
margin_bottom = 323.0
custom_fonts/font = SubResource( 3 )
text = "Explanation"
align = 1
autowrap = true

[node name="Label" type="Label" parent="."]
margin_left = 230.0
margin_top = 130.0
margin_right = 510.0
margin_bottom = 155.0
rect_scale = Vector2( 1.2, 1 )
custom_fonts/font = SubResource( 4 )
text = "Comments from the audience:"
align = 1
autowrap = true
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="ParticleTimer" to="ParticleTimer" method="_on_ParticleTimer_timeout"]
